--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ FRONTEND_URL=https://your-frontend.com
 # Supabase Configuration
 # Get these from your Supabase project settings
 SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SECRET_KEY=
