--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "openai-agents>=0.2.0",
     "fastapi>=0.121.1",
-    "kerykeion>=5.1.11",
     "openai>=2.7.1",
     "python-dotenv>=1.2.1",
-    "redis>=7.0.1",
     "supabase>=2.24.0",
     "uvicorn>=0.38.0",
+    "httpx>=0.27.0",
+    "geopy>=2.4.0",
+    "timezonefinder>=6.2.0",
 ]
