--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ dependencies = [
     "httpx>=0.27.0",
     "geopy>=2.4.0",
     "timezonefinder>=6.2.0",
+    "stripe>=11.0.0",
+    "pydantic>=2.0.0",
 ]
