--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,43 @@
-# GeoNames API Configuration
-# Get your username at https://www.geonames.org/login
-GEONAMES_USERNAME=your_geonames_username
+# ==============================================================================
+# Astrology API Configuration
+# ==============================================================================
+# Copy this file to .env and fill in your values.
+# All variables without defaults are REQUIRED.
 
-# Frontend URL for CORS (optional)
-FRONTEND_URL=https://your-frontend.com
-
+# ------------------------------------------------------------------------------
 # Supabase Configuration
-# Get these from your Supabase project settings
+# Get these from your Supabase project: Settings > API
+# ------------------------------------------------------------------------------
 SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SECRET_KEY=
+SUPABASE_SECRET_KEY=your-service-role-key
+
+# ------------------------------------------------------------------------------
+# RapidAPI Configuration
+# Get your key from https://rapidapi.com/hub
+# Subscribe to the Astrologer API
+# ------------------------------------------------------------------------------
+RAPIDAPI_KEY=your-rapidapi-key
+RAPIDAPI_HOST=astrologer.p.rapidapi.com
+
+# ------------------------------------------------------------------------------
+# Stripe Configuration
+# Get these from your Stripe Dashboard: Developers > API keys
+# Create products and prices in Products section
+# ------------------------------------------------------------------------------
+STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
+STRIPE_PRICE_ID_BASIC=price_basic_plan_id
+STRIPE_PRICE_ID_PRO=price_pro_plan_id
+
+# ------------------------------------------------------------------------------
+# Application Configuration (optional - have defaults)
+# ------------------------------------------------------------------------------
+# Frontend URL for CORS (default: http://localhost:3000)
+FRONTEND_URL=http://localhost:3000
+
+# Log level (default: INFO)
+# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# Additional CORS origins (comma-separated, optional)
+# ADDITIONAL_CORS_ORIGINS=https://example.com,https://staging.example.com
